# interface-azure-integration

./: .gitignore  README.md  interface.yaml  make_docs  provides.py  pydocmd.yml  requires.py  tox.ini
docs/: provides.md  requires.md
ops/: pyproject.toml  tox.ini
ops/ops/interface_azure/: requires.py
ops/tests/data/: azure_sent.yaml  from_integrator.yaml
ops/tests/unit/: test_ops_requires.py
